--- a/less/base.less
+++ b/less/base.less
@@ -67,7 +67,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5 {
 }
 
 h1, .h1 {
-	font-size: 42px;
+	font-size: 50px;
 	color: @red;
 	text-transform: uppercase;
 	margin: 0;
@@ -131,6 +131,16 @@ header {
     	width: 100%;
     	top: 0;
 	}
+
+
+.header:before {
+    display:block; 
+    content:""; 
+    height:50px; 
+    margin:-50px 0 0; 
+}
+
+
 
 /* NAVIGATION */
 
